--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "mocha",
-    "precommit": "npm run test"
+    "build": "terser -c -m -o main.min.js -- main.js"
   },
   "repository": {
     "type": "git",
@@ -27,11 +27,11 @@
     "husky": "^4.0.0-beta.5",
     "jsdom": "^15.2.1",
     "mocha": "^6.2.2",
-    "mocha-jsdom": "^2.0.0"
+    "terser": "^4.4.2"
   },
-  "husty": {
+  "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "npm test"
     }
   }
 }
